# log-analyzer

./: Docker-compose.yml  DockerFile  PLAN  README.md  config.py  main.py  monitor.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Analytics/: alerts.py  detection.py  frequency.py  test_alerts.py  test_detection.py  test_frequency.py  ui.py
cli/: parser.py
notifiers/: email.py
parser/: apache_parser.py  base_parser.py  detector.py  linux_auth_parser.py  test_detector.py  unified_parser.py
tests/: test_detection.py  test_frequency.py
